--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1"
   }
